# geoopt

./: .deepsource.toml  .gitignore  .gitpod.yml  .pylintrc  .readthedocs.yml  .travis.yml  CHANGELOG.rst  LICENSE  Makefile  README.md  README.rst  Untitled.ipynb  default.nix  lorentz.ipynb  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  shell.nix  test-output.xml  test_adam.py  test_lorentz_math.py
.github/: CODE_OF_CONDUCT.md  FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_manifold.md
.github/PULL_REQUEST_TEMPLATE/: new_manifold.md
.github/workflows/: pythonpublish.yml  testing.yml
docs/: Makefile  conf.py  devguide.rst  extended.rst  index.rst  manifolds.rst  optimizers.rst  samplers.rst  tensors.rst
docs/extended/: poincare.rst  stereographic.rst
docs/plots/extended/poincare/: distance.py  distance2plane.py  gyrovector_parallel_transport.py  mobius_add.py  mobius_matvec.py  mobius_sigmoid_apply.py  parallel_transport.py
docs/plots/extended/product/: torus-embedding-3.py
docs/plots/extended/stereographic/: distance.py  distance2plane.py  euclidean-grid.py  geodesic-grid.py  gyrovector_parallel_transport.py  midpoint.py  mobius_add.py  mobius_matvec.py  mobius_sigmoid_apply.py  orthogonal_projection.py  orthogonal_projection_pub.py  parallel_transport.py
examples/: hyperbolic_multiclass_classification.ipynb  lorentz.ipynb  mobius_linear_example.py  rwolfe_example.ipynb  stereographic_example.py  visualizing_entailment_cones.ipynb
geoopt/: __init__.py  _compat.py  docutils.py  manifolds.py  tensor.py  util.py  utils.py
geoopt/datasets/: __init__.py  stereographic.py
geoopt/layers/: __init__.py  lorentz.py  stereographic.py
geoopt/linalg/: __init__.py  _expm.py  batch_linalg.py
geoopt/manifolds/: ProductSpace_TODO.py  __init__.py  base.py  birkhoff_polytope.py  euclidean.py  product.py  scaled.py  sphere.py  stiefel.py  symmetric_positive_definite.py
geoopt/manifolds/lorentz/: __init__.py  math.py
geoopt/manifolds/poincare/: __init__.py  math.py
geoopt/manifolds/siegel/: __init__.py  bounded_domain.py  csym_math.py  siegel.py  upper_half.py  vvd_metrics.py
geoopt/manifolds/stereographic/: __init__.py  manifold.py  math.py  utils.py  weighted_midpoint.py
geoopt/manifolds/universal/: __init__.py  math.py
geoopt/optim/: __init__.py  mixin.py  radam.py  rlinesearch.py  rsgd.py  rwolfe.py  sparse_radam.py  sparse_rsgd.py  tracing.py
geoopt/samplers/: __init__.py  base.py  hmc.py  rhmc.py  rsgld.py  samplers.py  sgld.py  sgrhmc.py
geoopt/util/: __init__.py  linalg.py
scripts/: Dockerfile  before_install_nix_win.sh  container.sh  create_testenv.sh  install_deps.sh  install_miniconda.sh  install_nix_win.sh
tests/: rwolfe test.ipynb  test_adam.py  test_adam_numerical_stability.py  test_birkhoff.py  test_cayley_transform.py  test_data copy.py  test_data.py  test_euclidean.py  test_gyrovector_math.py  test_layers_lorentz.py  test_lorentz_math.py  test_manifold.py  test_manifold_basic.py  test_origin.py  test_poincare_math.py  test_product_manifold.py  test_random.py  test_rhmc.py  test_rlinesearch.py  test_rsgd.py  test_rwolfe.py  test_scaling.py  test_siegel_distance.py  test_sparse_adam.py  test_sparse_rsgd.py  test_spd_norm.py  test_stereographic_product_manifold.py  test_takagi_factorization.py  test_tensor_api.py  test_utils.py  test_wrapped_normal.py
tests/stereographic/: tdistances.py  test_math.py  test_optim.py
