[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "geoopt"
dynamic = ["version"]
description = """Unofficial implementation for “Riemannian Adaptive Optimization Methods” ICLR2019 and more"""
readme = "README.rst"
requires-python = ">=3.8"
authors = [
    {name = "Geoopt Developers", email = "maxim.v.kochurov@gmail.com"}
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.0.1",
    "numpy",
    "scipy",
]
license = {file = "LICENSE"}

[project.urls]
homepage = "https://github.com/geoopt/geoopt"
repository = "https://github.com/geoopt/geoopt"
documentation = "https://geoopt.readthedocs.io/en/latest/"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-html",
    "ruff>=0.4.0",
    "coveralls",
    "twine",
    "wheel",
    "seaborn",
    "sphinx"
]

rtd = [
    "matplotlib"
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
]
ignore = [
    "E501",
    "E721",
    "E741",
    "F401",
    "F811",
    "F841",
    "I001",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "default::UserWarning",
    "default::RuntimeWarning",
]


